--- a/scss/global/_offer-slider.scss
+++ b/scss/global/_offer-slider.scss
@@ -1,6 +1,6 @@
 .prod-slider{
     .prod-slider-item{
-        padding-left:20px;
+        padding-left:15px;
         .inner-box{
             background: #F5F5F5;
             padding: 40px 20px 20px; 
@@ -10,6 +10,7 @@
             .img-box{
                 margin-bottom: 20px;
                 img{
+                    transition: all 0.3s ease-in-out;
                     display: block;
                     margin: auto;
                     max-width: 240px;
@@ -46,14 +47,27 @@
                 }
             }
         }
+        &:hover{
+            .inner-box{
+                .img-box{
+                    img{
+                        transform: scale(1.1);
+                    }
+                }
+            }
+        }
     }
 }
 
 @include mq($from: tablet) {
     .prod-slider{
+        padding-left: 20px;
+        .prod-slider-item{
+            padding-left:10px;
+        }
         .slick-list{
             overflow: visible;
         }
-        padding-left: 30px;
+        
     }
 }
