--- a/scss/global/_utilities.scss
+++ b/scss/global/_utilities.scss
@@ -15,7 +15,7 @@
     text-align: center;
     font-size: 24px;
     font-weight: 400;
-    margin:0 auto 20px;
+    margin:0 auto 30px;
     @include mq($from: tablet) {
         font-size: 30px;
         margin:0 auto 40px;
